--- a/Repast.settings
+++ b/Repast.settings
@@ -12,6 +12,6 @@
     <string>SettingsRegistryId</string>
     <string>Repast.registry</string>
     <string>LastLoadedScenario</string>
-    <string>C:\Users\Jose Gmz\eclipse-workspace\AnalisisConsumo\AnalisisConsumo.rs</string>
+    <string>C:\git\AnalisisConsumo\AnalisisConsumo.rs</string>
   </hashtable>
 </simphony.settings.SettingsRegistry>
